signin signout successfully. Still no presenter.attch/detach view working

--- a/App/MyNewsCast/app/src/main/res/menu/activity_main_drawer.xml
+++ b/App/MyNewsCast/app/src/main/res/menu/activity_main_drawer.xml
@@ -35,4 +35,12 @@
         </menu>
     </item>
 
+    <item android:title="Account">
+        <menu>
+            <item
+                android:id="@+id/nav_signout"
+                android:title="SignOut" />
+        </menu>
+    </item>
+
 </menu>
