--- a/App/MyNewsCast/app/src/main/res/layout/activity_main.xml
+++ b/App/MyNewsCast/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
+
             android:layout_width="match_parent"
             android:layout_height="@dimen/detail_backdrop_height"
             android:fitsSystemWindows="true"
@@ -28,10 +29,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                app:contentScrim="?attr/colorPrimary"
+                app:contentScrim="@color/colorPrimaryDark"
                 app:expandedTitleMarginEnd="64dp"
                 app:expandedTitleMarginStart="48dp"
                 app:expandedTitleTextAppearance="@android:color/transparent"
+                app:expandedTitleGravity="bottom"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <RelativeLayout
@@ -50,23 +52,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical">
+                        android:gravity="center_horizontal">
 
                         <TextView
-                            android:id="@+id/love_music"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/backdrop_title"
                             android:textColor="@android:color/white"
                             android:textSize="@dimen/backdrop_title" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/backdrop_subtitle"
-                            android:textColor="@android:color/white"
-                            android:textSize="@dimen/backdrop_subtitle" />
 
                     </LinearLayout>
                 </RelativeLayout>
