--- a/App/MyNewsCast/app/src/main/res/layout/article_item.xml
+++ b/App/MyNewsCast/app/src/main/res/layout/article_item.xml
@@ -10,8 +10,10 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_margin="@dimen/card_margin"
-        android:elevation="3dp"
-        card_view:cardCornerRadius="@dimen/card_album_radius">
+        android:elevation="8dp"
+        card_view:cardCornerRadius="@dimen/card_album_radius"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <RelativeLayout
             android:layout_width="match_parent"
