--- a/App/MyNewsCast/app/src/main/res/layout/content_experience.xml
+++ b/App/MyNewsCast/app/src/main/res/layout/content_experience.xml
@@ -20,7 +20,7 @@
         app:srcCompat="@drawable/ic_transit" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/playButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="60dp"
