--- a/App/MyNewsCast/app/src/main/res/layout/content_experience.xml
+++ b/App/MyNewsCast/app/src/main/res/layout/content_experience.xml
@@ -7,12 +7,12 @@
 
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/podcastButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="75dp"
         android:layout_marginTop="60dp"
-        android:background="@null"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:backgroundTint="@null"
         android:contentDescription="@string/transit_button"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,17 +20,18 @@
         app:srcCompat="@drawable/ic_transit" />
 
     <ImageButton
-        android:id="@+id/playButton"
+        android:id="@+id/videoButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="75dp"
-        android:background="@null"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:backgroundTint="@null"
         android:contentDescription="@string/play_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_play" />
+        app:srcCompat="@drawable/ic_play"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/experience_list_view"
@@ -38,6 +39,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+        app:layout_constraintTop_toBottomOf="@+id/podcastButton" />
 
 </android.support.constraint.ConstraintLayout>
