--- a/App/MyNewsCast/app/src/main/res/layout/activity_main.xml
+++ b/App/MyNewsCast/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:gravity="center_horizontal"
+                        android:gravity="center"
                         android:orientation="horizontal">
 
                         <ImageButton
