--- a/App/MyNewsCast/app/src/main/res/layout/media_player.xml
+++ b/App/MyNewsCast/app/src/main/res/layout/media_player.xml
@@ -5,81 +5,67 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="#333333"
+    android:gravity="center"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
-
-    <TextView
-        android:id="@+id/songName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="songName" />
-
-    <ImageView
-        android:id="@+id/mp3Image"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:padding="30dp"
-        android:background="#ffffff"
-        android:layout_margin="30dp" />
-
-    <TextView
-        android:id="@+id/songDuration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="songDuration" />
-
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="46dp"
         android:layout_marginTop="30dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal" >
+        android:gravity="center|center_horizontal"
+        android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/media_rew"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
             android:onClick="rewind"
-            android:src="@android:drawable/ic_media_rew"
-            android:background="?android:attr/selectableItemBackgroundBorderless"/>
+            android:src="@android:drawable/ic_media_rew" />
 
         <ImageButton
             android:id="@+id/media_pause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
             android:onClick="pause"
-            android:src="@android:drawable/ic_media_pause"
-            android:background="?android:attr/selectableItemBackgroundBorderless"/>
+            android:src="@android:drawable/ic_media_pause" />
 
         <ImageButton
             android:id="@+id/media_play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
             android:onClick="play"
-            android:src="@android:drawable/ic_media_play"
-            android:background="?android:attr/selectableItemBackgroundBorderless"/>
+            android:src="@android:drawable/ic_media_play" />
 
         <ImageButton
             android:id="@+id/media_ff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
             android:onClick="forward"
-            android:src="@android:drawable/ic_media_ff"
-            android:background="?android:attr/selectableItemBackgroundBorderless"/>
+            android:src="@android:drawable/ic_media_ff" />
     </LinearLayout>
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/songDuration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="0 min, 0 sec" />
 
 </LinearLayout>
