--- a/App/MyNewsCast/app/src/main/res/layout/media_player.xml
+++ b/App/MyNewsCast/app/src/main/res/layout/media_player.xml
@@ -12,6 +12,17 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/podcast_image"/>
+
+    <TextView
+        android:id="@+id/podcast_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="46dp"
