--- a/App/MyNewsCast/app/src/main/res/layout/queue_activity.xml
+++ b/App/MyNewsCast/app/src/main/res/layout/queue_activity.xml
@@ -8,7 +8,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/queue_list_view"
-        android:layout_width="272dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="66dp" />
 
