--- a/App/MyNewsCast/app/src/main/res/layout/queue_activity.xml
+++ b/App/MyNewsCast/app/src/main/res/layout/queue_activity.xml
@@ -8,8 +8,13 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/queue_list_view"
-        android:layout_width="wrap_content"
+        android:layout_width="259dp"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="66dp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
